--- a/my.cnf
+++ b/my.cnf
@@ -98,6 +98,7 @@ max_connect_errors              = 1000000
 pid_file                        = /var/lib/mysql/mysql.pid
 port                            = 3306
 skip_external_locking
+skip-name-resolve
 socket                          = /var/lib/mysql/mysql.sock
 tmpdir                          = /tmp
 user                            = mysql
